<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meteo Thermometer</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_message">No network connection</string>
    <string name="dialog_title">What do you want to do?</string>
    <string-array name="dialog_options">
    	<item>Update Temperature</item>
    	<item>Visit Meteotrentino.it</item>
    	<item>Configure Widget</item>
    </string-array>
    <string name="info_source_title" formatted="false" translatable="false">Meteotrentino</string>
    <string name="info_source" formatted="false" translatable="false">"http://www.meteotrentino.it/Default.aspx"</string>
    <string name="web_info_source" formatted="false" translatable="false">http://www.meteotrentino.it/Default.aspx</string>
    <string name="user_agent" formatted="false" translatable="false">"%s/%s (Linux; Android)"</string>
    <string-array name="temperature_descriptions">
		<item>Freezing</item>
		<item>Cold</item>
		<item>Warm</item>
		<item>Hot</item>
		<item>Boiling</item>
	</string-array>
	<string-array name="countries">
	    <item>Italy</item>
		<item>Paraguay</item>
	</string-array>
    <string-array name="locations_it" translatable="false">
		<item>Trento</item>
		<item>Rovereto</item>
		<item>Pergine</item>
		<item>Arco</item>
		<item>Cles</item>
		<item>Cavalese</item>
		<item>Male</item>
		<item>Tione</item>
	</string-array>
	<string-array name="locations_py">
		<item>Asuncion</item>
		<item>Ciudad del Este</item>
		<item>San Lorenzo</item>
		<item>Pozo Colorado</item>
		<item>Hohenau</item>
		<item>San Bernardino</item>
		<item>Caazapa</item>
		<item>Tte. Irala Fernandez</item>
		<item>Luque</item>
		<item>Lambare</item>
		<item>Villarrica</item>
		<item>Capitan Meza</item>
		<item>Pilar</item>
		<item>Concepción</item>
		<item>San Pedro</item>
		<item>Saltos del Guairá</item>
		<item>Ayolas</item>
		<item>Vallemi</item>
	</string-array>
    <string name="choose_location" formatted="false">Choose the location</string>
    <string name="choose_temperature_unit" formatted="false">Select the unit to measure the temperature</string>
    <string name="fahrenheit" formatted="false">Fahrenheit</string>
    <string name="celsius" formatted="false">Celsius</string>
    <string name="choose_frequency" formatted="false">Choose the update frequency of the widget</string>
    <string-array name="frequency_update">
		<item>30 minutes</item>
		<item>15 minutes</item>
		<item>5 minutes</item>
	</string-array>
	<string name="poweredby_it" formatted="false" translatable="false">www.meteotrentino.it</string>
	<string name="poweredby_py" formatted="false" translatable="false">www.meteorologia.gov.py</string>
	<string name="loading">Loading&#x2026;</string>
	<string name="behavior_message">(The widget will be updated every 30 minutes)</string>
	<string name="error">Error while updating the widget</string>
	<string name="last_updated">Last Updated</string>
	<string name="label_cancel_button">Cancel</string>
	<string name="label_save_button">Save</string>
	<string name="label_tab_settings">SETTINGS</string>
	<string name="label_tab_statistics">STATISTICS</string>
	<string name="label_average">Avg</string>
	<string name="label_min">Min</string>
	<string name="label_max">Max</string>
	<string-array name="stat_filters">
		<item>Today</item>
		<item>This Week</item>
		<item>This Month</item>
		<item>This Semester</item>
		<item>This Year</item>
		<item>Same Day Last Year</item>
		<item>Same Week Last Year</item>
		<item>Same Month Last Year</item>
	</string-array>
	<string name="label_filter">in</string>
	<string name="statistic_exception">Could not collect statistics for the selected period of time or location</string>
	<string name="table_title_day">Day</string>
	<string name="table_title_hour">Hour</string>
	<string name="table_title_date">Date</string>
	<string name="table_title_month">Month</string>
	<string name="table_title_avg_temp">Avg Temperature</string>
	<string name="loading_statistics_message">Loading Statistics, please wait&#x2026;</string>
	<string name="source_label">Source</string>
</resources>